# obsidian

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  adaptive_8hpp.html  adaptive_8hpp.js  adaptive_8hpp__incl.map  adaptive_8hpp__incl.md5  annotated.html  annotated.js  app_2settings_8hpp.html  app_2settings_8hpp.js  app_2settings_8hpp__dep__incl.map  app_2settings_8hpp__dep__incl.md5  app_2settings_8hpp__incl.map  app_2settings_8hpp__incl.md5  asyncdelegator_8cpp.html  asyncdelegator_8cpp__incl.map  asyncdelegator_8cpp__incl.md5  asyncdelegator_8hpp.html  asyncdelegator_8hpp__dep__incl.map  asyncdelegator_8hpp__dep__incl.md5  asyncdelegator_8hpp__incl.map  asyncdelegator_8hpp__incl.md5  asyncworker_8hpp.html  asyncworker_8hpp.js  asyncworker_8hpp__incl.map  asyncworker_8hpp__incl.md5  base_8hpp.html  base_8hpp.js  base_8hpp__dep__incl.map  base_8hpp__dep__incl.md5  base_8hpp__incl.map  base_8hpp__incl.md5  build.sh  chainarray_8cpp.html  chainarray_8cpp.js  chainarray_8cpp__incl.map  chainarray_8cpp__incl.md5  (+1155 more)
CMakeModules/: FindStateline.cmake
docs/: DEPENDENCIES
docs/doxygen/: installation.md
examples/: moomba_config.json
examples/moomba/: moomba.input  moomba_config.json
examples/moomba-simple/: BigLakeSuiteCtrlMask.csv  BigLakeSuiteRockMask.csv  EyreRockMask.csv  MurtaCtrlMask.csv  ToolacheeCtrlMask.csv  moomba_config.json
prereqs/: README.md  buildPrereqs.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+85 more)
src/app/: CMakeLists.txt
src/datatype/: blob.cpp  contactpoint.hpp  datatypes.hpp  forwardmodels.hpp  gravity.hpp  magnetic.hpp  mt.hpp  seismic.hpp  sensors.hpp  thermal.hpp  voxel.hpp  world.hpp
src/distrib/: CMakeLists.txt
src/distrib/test/: CMakeLists.txt  testgaussian.cpp
src/fwdmodel/: CMakeLists.txt  blob.cpp  contactpoint.cpp  fwd.hpp  global.hpp  gravity.cpp  gravity.hpp  gravmag.cpp  gravmag.hpp  magnetic.cpp  magnetic.hpp  mt1d.cpp  mt1d.hpp  seismic.cpp  test1dmt.cpp  testcontactpoint.cpp  testgrav.hpp  testgravmag.cpp  testmag.hpp  testseismic.cpp  testtherm.cpp  testtherm.hpp  thermal.cpp  thermal.hpp
src/fwdmodel/test/: CMakeLists.txt  test1dmt.hpp  testgrav.hpp  testtherm.cpp
src/input/: CMakeLists.txt  blob.cpp  common.hpp  contactpoint.cpp  global.cpp  gravity.cpp  input.cpp  input.hpp  magnetism.cpp  mt.cpp  seismic.cpp  testcontactpoint.cpp  testgravity.cpp  testinput.cpp  testmagnetism.cpp  testmt.cpp  testseismic.cpp  testthermal.cpp  testworld.cpp  thermal.cpp  world.cpp
src/input/test/: CMakeLists.txt  testcontactpoint.cpp  testgravity.cpp  testinput.cpp  testmagnetism.cpp  testmt.cpp  testseismic.cpp  testthermal.cpp  testworld.cpp
src/io/: CMakeLists.txt  blob.cpp  csv.cpp  csv.hpp  dumpnpz.hpp  npy.cpp  npy.hpp  string.cpp  string.hpp
src/io/cnpy/: cnpy.cpp  cnpy.h
src/prior/: CMakeLists.txt  blob.cpp  contactpoint.hpp  gravity.hpp  magnetic.hpp  mt.hpp  prior.cpp  prior.hpp  seismic.hpp  testprior.cpp  testprior.hpp  thermal.hpp  world.cpp  world.hpp
src/prior/test/: CMakeLists.txt  testprior.cpp
src/serial/: CMakeLists.txt  blob.cpp  commstypes.cpp  commstypes.hpp  contactpoint.cpp  contactpoint.hpp  gravity.cpp  gravity.hpp  magnetic.cpp  magnetic.hpp  mcmc.cpp  mcmc.hpp  mt.cpp  mt.hpp  seismic.cpp  seismic.hpp  serial.hpp  serialtypes.proto  stateline.proto  testcontactpoint.cpp  testmt.cpp  testthermal.cpp  testworld.cpp  thermal.cpp  thermal.hpp  utility.cpp  utility.hpp  world.cpp  world.hpp
src/serial/test/: CMakeLists.txt  testgravity.cpp  testmagnetism.cpp  testseismic.cpp
src/test/: CMakeLists.txt
src/world/: CMakeLists.txt  blob.cpp  grid.cpp  grid.hpp  interpolate.cpp  interpolate.hpp  interpolatorspec.cpp  interpolatorspec.hpp  kernel.cpp  kernel.hpp  property.cpp  property.hpp  query.hpp  testworld.cpp  transitions.cpp  transitions.hpp  voxelise.cpp  voxelise.hpp
src/world/test/: CMakeLists.txt  testboundariesaretimes.cpp  testworld.hpp
